--- a/webpack-demo-00/package.json
+++ b/webpack-demo-00/package.json
@@ -17,6 +17,9 @@
     "webpack-cli": "5.0.1"
   },
   "dependencies": {
+    "axios": "1.2.3",
+    "react": "18.2.0",
+    "vue": "3.2.45",
     "webpack-dev-server": "4.11.1"
   }
 }
