--- a/webpack-demo-00/package.json
+++ b/webpack-demo-00/package.json
@@ -18,7 +18,10 @@
   },
   "dependencies": {
     "axios": "1.2.3",
+    "css-loader": "6.7.3",
+    "mini-css-extract-plugin": "2.7.2",
     "react": "18.2.0",
+    "style-loader": "3.3.1",
     "vue": "3.2.45",
     "webpack-dev-server": "4.11.1"
   }
